--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,23 @@
 <resources>
-    <string name="app_name">TwitterSearch</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Twitter Search</string>
+    <string name="input_search_terms">Search...</string>
+
+    <string name="base_url">https://api.twitter.com/</string>
+    <string name="consumer_key">gcAi31ezNfzSAuRWYigGn1Umv</string>
+    <string name="consumer_secret">GkcUE0o5G53xnpAV5rFlhUwOagkBNL6oEN6uLTUjgxuOEwQvPb</string>
+
+    <string name="seconds">%1$d seconds ago</string>
+    <string name="minutes">%1$d minutes ago</string>
+    <string name="hours">%1$d hours ago</string>
+    <string name="days">%1$d days ago</string>
+
+    <string name="help_title">Welcome to Twitter Search.</string>
+    <string name="help_subtitle">Try searching something!</string>
+
+    <string name="empty_title">No tweets were found!</string>
+    <string name="empty_subtitle">Please, try with a different search.</string>
+
+    <string name="error_title">There was an error loading the tweets.</string>
+    <string name="error_subtitle">Please retry!</string>
+
 </resources>
